Adicao de novos arquivos

--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
                 <li>
                     <a href="index.html">Sobre mim</a>
                 </li>
-                <li>
-                    <a href="project.html">Projetos</a>
-                </li>
-                <li>
-                    <a href="contact.html">Contato</a>
-                </li>
-            </ul>
+               
         </nav>
         <header>
             <div class="center">
@@ -34,7 +28,7 @@
             <section>
                 <h3>Sobre mim</h3>
                 <p>
-        No começo do ano de 2022, mudei totalmente meu  pensamento para entrar na área de programação e desde então  isso estar sendo umas das melhores mudanças em minha vida que está apenas no inicio da minha carreira futura como Desenvolvedor de Softwares.
+        Ano de 2022, novas perspectivas e grandes mudanças em meu pensamento. Ao ingressar no curso Técnico em Informática para Internet, descobri o mundo da Progamação. Na certeza que fiz a melhor escolha para minha vida profissional como Desenvolvedor de Software.
                 </p>
             </section>
             <section>
